2005-12-16  Sven Panne  <sven.panne@aedion.de>

	* Released Version 1.0.0, CVS tag is "freealut_1_0_0".

	* admin/pkgconfig/freealut-config.in, admin/pkgconfig/freealut.pc.in:
	Fixed copy-n-paste typo. Somehow this fix didn't make into RC2...

2005-12-15  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am, admin/RPM/freealut.spec, configure.ac: Build and install
	freealut-config and a pkg-config description.

	* admin/.cvsignore, admin/Makefile.am, admin/pkgconfig/.cvsignore,
	admin/pkgconfig/Makefile.am, admin/pkgconfig/freealut-config.in,
	admin/pkgconfig/freealut.pc.in: Added.

2005-12-15  Prakash Punnoor <prakash@punnoor.de>

	* README: CMake cache clearing typos
	
	* CMakeLists.txt: also make freealut-config and freealut.pc; sync VERSION
	to configure.ac

2005-12-12  Prakash Punnoor <prakash@punnoor.de>

	* README: CMake cache clearing

2005-12-10  Sven Panne  <sven.panne@aedion.de>

	* src/alutInit.c (alutExit): Do a full sanity check only when ALUT
	itself owns the context, an external context might have been destroyed
	before alutExit is called.

2005-12-05  Prakash Punnoor <prakash@punnoor.de>

	* Makefile.am: add CMakeLists.txt to EXTRA_DIST
	
	* README: add CMake use instructions

2005-12-04  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: add -DNDEBUG
	
	* AUTHORS: add myself

2005-12-03  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, include/AL/alut.h, src/alutBufferData.c,
	src/alutInputStream.c, src/alutLoader.c src/alutWaveform.c: Avoid
	generating a depedency on GLIBC 2.3. Added --enable-more-warnings
	configure flag and fixed the resulting warnings.

2005-12-03  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: made pretty feature-complete

2005-12-02  Prakash Punnoor <prakash@punnoor.de>

	* src/alutCodec.c, src/alutLoader.c: fix warnings
	
	* CMakeLists.txt: added; doesn't build examples/tests yet

2005-11-28  Sven Panne  <sven.panne@aedion.de>

	* test_suite\Makefile.am: Distribute example sounds, too.
